# keyword-extractor

./: .gitignore  Dockerfile  Makefile  Pipfile  Procfile  README.md  app.py  pyproject.toml
keyword_extractor/: __init__.py  corpus.py  utils.py
keyword_extractor/extractors/: __init__.py  base.py  embedrank.py  textrank.py  tfidf.py
notebooks/: embedrank.ipynb  scratchpad.ipynb
tests/: conftest.py  test_keyword_extractor.py  test_utils.py
tests/extractors/: test_base.py  test_tfidf.py
