[tool.poetry]
name = "keyword_extractor"
version = "0.1.0"
description = ""
authors = ["Ndil-Adjim Sou Ngadoy <nasoungadoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wordcloud = "^1.6.0"
nltk = "^3.4.5"
spacy = "^2.2.4"
scipy = "^1.4.1"
sklearn = "^0.0"
cytoolz = "^0.10.1"
textacy = "^0.10.0"
streamlit = "^0.57.3"
pandas = "^1.0.3"
pytextrank = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.13.0"
mypy = "^0.770"
pylint = "^2.4.4"
autopep8 = "^1.5.1"
jupyter = "^1.0.0"
jupyterlab = "^2.1.0"
ipython-autotime = "^0.1"
matplotlib = "^3.2.1"
seaborn = "^0.10.0"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
